[CDAPI-95]: Updated endpoint validation to require Composition and included initial validation
